<resources>
    <string name="app_name">ApProject</string>
    <string name="email">Email</string>
    <string name="registerAsJobSeeker">Register Student</string>
    <string name="registerAsEmployer">Register Teacher</string>
    <string name="or">OR</string>
    <string name="registerAs">Register As</string>
    <string name="password">Password</string>
    <string name="signIn">Log In</string>
    <string name="signup">SignUp</string>
    <string name="displaysignup">Register</string>
    <string name="forget">Forget Password</string>
    <string name="submit">Submit</string>
    <string name="aready">Already have an account? Log In</string>
    <string name="title_activity_sign_up1">SignUp1Activity</string>
    <string name="student">Student</string>
    <string name="tutor">Tutor</string>

    <string name="fname">Fname :</string>
    <string name="lname">Lname :</string>
    <string name="cnic">CNIC :</string>
    <string name="next">Next</string>
    <string name="age">Age :</string>

    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="Institute">Institute :</string>
    <string name="expertise">Expertise :</string>
    <string name="location">Location :</string>
    <string name="uploadimg">Upload Image :</string>
    <string name="dashboard">DashBoard</string>
    <array name="expert">
        <item>Select Below</item>
        <item>Biology</item>
        <item>Mathemathics</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Urdu</item>
        <item>English</item>
    </array>
    <array name="gender">
        <item>Select Below</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="enter_course_id">Enter Course Id</string>
    <string name="section_name">Section Name</string>
</resources>
