<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/footer"
    tools:context=".Activities.LogInActivity">

    <com.github.angads25.toggle.LabeledSwitch
        android:id="@+id/switch1"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        app:colorBorder="#091647"
        app:colorOn="#091647"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:on="false"
        app:textOff="Student"
        app:textOn="Tutor" />


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/logos" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="40dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/titletextView"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="40dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/signinButton"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:padding="2dp"
        android:shadowColor="#0000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/signIn"
        android:textColor="#FFFFFF"

        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/forgetpasswordButton"
        android:layout_width="158dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button2"
        android:text="@string/forget"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/signinButton"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button2"
        android:text="@string/signup"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/forgetpasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toEndOf="@+id/forgetpasswordButton"
        app:layout_constraintTop_toTopOf="@+id/forgetpasswordButton" />

    <ImageView
        android:id="@+id/lockimageView"
        android:layout_width="30dp"
        android:layout_height="35dp"

        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText"
        app:srcCompat="@drawable/lockicon" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="30dp"
        android:layout_height="35dp"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toTopOf="@+id/emailEditText"
        app:srcCompat="@drawable/usericon" />

    <TextView
        android:id="@+id/titletextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="SAUFR"
        android:textAlignment="center"
        android:textColor="@color/darktext"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>